# app-wifi-lib

.github/workflows/: init-template.yml
include/__MODULE_NAME__/: __MODULE_NAME__.h
include/app_wifi_lib/: app_wifi_lib.h
samples/__MODULE_NAME___basic/: CMakeLists.txt  prj.conf
samples/__MODULE_NAME___basic/src/: main.c
samples/app_wifi_lib/: CMakeLists.txt  prj.conf
samples/app_wifi_lib/src/: main.c
src/: __MODULE_NAME__.c  app_wifi_lib.c
zephyr/: CMakeLists.txt  Kconfig  module.yml
